--- a/src/app/pages/appointments/appointments.component.html
+++ b/src/app/pages/appointments/appointments.component.html
@@ -1,136 +1,122 @@
-<!-- h-100 d-flex justify-content-center align-items-end -->
-
-<div class="row py-3">
+<div>
   <form [formGroup]="form" (ngSubmit)="onSubmit()" class="w-100 py-3">
     <!-- Descripción -->
-    <div class="row mb-3">
-      <div class="col-12">
-        <label class="form-label" for="">Descripción</label>
-        <textarea
-          class="form-control form-control-sm"
-          placeholder="Agregar una descripción:"
-          rows="3"
-          style="resize: none"
-          formControlName="description"
-        ></textarea>
-      </div>
+    <div class="form-group mb-4">
+      <label class="form-label">Descripción</label>
+      <textarea
+        class="form-control form-control-sm"
+        placeholder="Agregar una descripción:"
+        rows="3"
+        style="resize: none"
+        formControlName="description"
+      ></textarea>
     </div>
 
     <!-- Fecha Cita -->
-    <div class="row mb-5">
-      <div class="col-12 col-md-3">
-        <label class="form-label" for="">Fecha de Cita</label>
-        <input
-          type="date"
-          class="form-control form-control-sm"
-          formControlName="appointmentDate"
-        />
-      </div>
+    <div class="form-group mb-4">
+      <label class="form-label">Fecha de Cita</label>
+      <input
+        type="date"
+        class="form-control form-control-sm"
+        formControlName="appointmentDate"
+      />
     </div>
 
     <!-- Búsqueda -->
-    <div class="row">
-      <label class="form-label"
-        >Realice un búsqueda para que seleccione al especialista</label
-      >
-    </div>
-    <div class="row mb-2">
-      <div class="col-12 col-md-4 my-1">
-        <input
-          type="text"
-          class="form-control form-control-sm"
-          [(ngModel)]="directionFilter"
-          [ngModelOptions]="{ standalone: true }"
-          placeholder="Buscar: Escriba dirección"
-        />
-      </div>
-      <div class="col-12 col-md-3 my-1">
-        <select
-          class="form-select form-select-sm"
-          aria-label="specialties"
-          (change)="onChangeSpecialty($event)"
-        >
-          <option [value]="-1" selected>Especialidad</option>
-          <option *ngFor="let specialty of specialties" [value]="specialty.id">
-            {{ specialty.specialty }}
-          </option>
-        </select>
-      </div>
-      <div class="col-12 col-md-3 my-1">
-        <select
-          class="form-select form-select-sm"
-          aria-label="schedule"
-          (change)="onChangeSchedule($event)"
-        >
-          <option [value]="-1" selected>Horarios</option>
-          <option *ngFor="let item of schedules" [value]="item.id">
-            {{ item.schedule }}
-          </option>
-        </select>
-      </div>
-      <div class="col-12 col-md-2 my-1">
-        <button
-          type="button"
-          class="btn btn-sm bg-primary w-100 text-white"
-          (click)="buscar()"
-        >
-          <i class="bi bi-search"></i>
-          Buscar
-        </button>
+    <div class="form-group mb-4">
+      <label class="form-label">Realice una búsqueda para seleccionar al especialista</label>
+      <div class="row">
+        <div class="col-12 col-md-4 mb-3">
+          <input
+            type="text"
+            class="form-control form-control-sm"
+            [(ngModel)]="directionFilter"
+            [ngModelOptions]="{ standalone: true }"
+            placeholder="Buscar: Escriba dirección"
+          />
+        </div>
+        <div class="col-12 col-md-3 mb-3">
+          <select
+            class="form-select form-select-sm"
+            aria-label="specialties"
+            (change)="onChangeSpecialty($event)"
+          >
+            <option [value]="-1" selected>Especialidad</option>
+            <option *ngFor="let specialty of specialties" [value]="specialty.id">
+              {{ specialty.specialty }}
+            </option>
+          </select>
+        </div>
+        <div class="col-12 col-md-3 mb-3">
+          <select
+            class="form-select form-select-sm"
+            aria-label="schedule"
+            (change)="onChangeSchedule($event)"
+          >
+            <option [value]="-1" selected>Horarios</option>
+            <option *ngFor="let item of schedules" [value]="item.id">
+              {{ item.schedule }}
+            </option>
+          </select>
+        </div>
+        <div class="col-12 col-md-2 mb-3">
+          <button
+            type="button"
+            class="btn btn-sm btn-primary w-100 text-white"
+            (click)="buscar()"
+          >
+            <i class="bi bi-search"></i> Buscar
+          </button>
+        </div>
       </div>
     </div>
 
     <!-- Tabla de resultado -->
-    <div class="row m-0 py-3">
-      <div *ngIf="doctors.length > 0" class="col-12 border rounded">
-        <div class="tableFixHead">
-          <table class="table table-hover table-striped w-100">
-            <thead>
+    <div class="form-group mb-4">
+      <div *ngIf="doctors.length > 0" class="table-responsive border rounded p-3 bg-white shadow-sm">
+        <table class="table table-hover table-striped w-100">
+          <thead class="table-primary">
+            <tr>
               <th>Nombres</th>
               <th>Apellidos</th>
               <th>Email</th>
               <th>Especialidad</th>
               <th>Horario de Atención</th>
               <th></th>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of doctors" (click)="isSelected.click()">
-                <td>{{ item.name }}</td>
-                <td>{{ item.lastName }}</td>
-                <td>{{ item.email }}</td>
-                <td>{{ item.specialty }}</td>
-                <td>{{ item.schedule }}</td>
-                <td>
-                  <div class="form-check">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="checkDoctor"
-                      [id]="item.id"
-                      #isSelected
-                      (change)="selectDoctor(item)"
-                    />
-                    <label class="form-check-label" for="checkDoctor">
-                      Seleccionar
-                    </label>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of doctors" (click)="isSelected.click()">
+              <td>{{ item.name }}</td>
+              <td>{{ item.lastName }}</td>
+              <td>{{ item.email }}</td>
+              <td>{{ item.specialty }}</td>
+              <td>{{ item.schedule }}</td>
+              <td>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="checkDoctor"
+                    [id]="item.id"
+                    #isSelected
+                    (change)="selectDoctor(item)"
+                  />
+                  <label class="form-check-label" for="checkDoctor">
+                    Seleccionar
+                  </label>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
 
-    <div class="row">
-      <div
-        class="col-12 col-md-auto d-flex align-items-end justify-content-end"
-      >
-        <button type="submit" class="btn btn-sm btn-primary w-100">
-          <i class="bi bi-send"></i>
-          Enviar Solicitud
-        </button>
-      </div>
+    <div class="form-group text-end">
+      <button type="submit" class="btn btn-sm btn-primary w-100 w-md-auto">
+        <i class="bi bi-send"></i> Enviar Solicitud
+      </button>
     </div>
   </form>
 </div>
