--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,21 @@
-<div class="container-lg border rounded shadow box px-4">
-  <div class="row mt-3 px-5">
-    <div>
+<div class="container-lg border rounded shadow box px-4 py-4 bg-light">
+  <div class="row mb-3">
+    <div class="col-12">
       <my-header
         (onClick)="logout()"
         [email]="user.email"
         [role]="users!.roles"
+        class="mb-3"
       ></my-header>
+    </div>
+    <div class="col-12">
       <my-navbar [pages]="pages"></my-navbar>
     </div>
   </div>
 
-  <div class="row m-0 box-content px-5">
-    <router-outlet></router-outlet>
+  <div class="row m-0 box-content">
+    <div class="col-12 px-0">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
-
-
