--- a/src/app/pages/personal-contact/personal-contact.component.html
+++ b/src/app/pages/personal-contact/personal-contact.component.html
@@ -1,72 +1,59 @@
-<div class="px-3">
+<div>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="row">
-      <div
-        class="col-12 col-md-4 d-flex align-items-center justify-content-center"
-      >
-        <i
-          class="bi bi-person-circle text-secondary"
-          style="font-size: 8rem"
-        ></i>
-        <hr>
+      <div class="col-12 col-md-4 text-center mb-3 mb-md-0">
+        <i class="bi bi-person-circle text-primary" style="font-size: 8rem"></i>
+        <hr class="my-4 d-md-none">
       </div>
       <div class="col-12 col-md-4">
-        <div class="mb-2">
+        <div class="form-group mb-3">
           <label class="form-label">Nombres</label>
-          <input formControlName="name" type="text" class="form-control form-control-sm" />
+          <input formControlName="name" type="text" class="form-control form-control-sm" placeholder="Ingrese sus nombres" />
         </div>
-        <div class="mb-2">
+        <div class="form-group mb-3">
           <label class="form-label">Apellidos</label>
-          <input formControlName="lastName" type="text" class="form-control form-control-sm" />
+          <input formControlName="lastName" type="text" class="form-control form-control-sm" placeholder="Ingrese sus apellidos" />
         </div>
-        <div class="mb-2">
+        <div class="form-group mb-3">
           <label class="form-label">Número Seguro</label>
-          <input formControlName="securityNumber" type="text" class="form-control form-control-sm" />
+          <input formControlName="securityNumber" type="text" class="form-control form-control-sm" placeholder="Ingrese su número de seguro" />
         </div>
-        <div class="mb-2">
+        <div class="form-group mb-3">
           <label class="form-label">Tipo de Sangre</label>
-          <input formControlName="typeBlood" type="text" class="form-control form-control-sm" />
+          <input formControlName="typeBlood" type="text" class="form-control form-control-sm" placeholder="Ingrese su tipo de sangre" />
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <div class="mb-2">
+        <div class="form-group mb-3">
           <label class="form-label">Dirección</label>
-          <input formControlName="direction" type="text" class="form-control form-control-sm" />
+          <input formControlName="direction" type="text" class="form-control form-control-sm" placeholder="Ingrese su dirección" />
         </div>
-        <div class="mb-2">
+        <div class="form-group mb-3">
           <label class="form-label">Celular</label>
-          <input formControlName="phone" type="text" class="form-control form-control-sm" />
+          <input formControlName="phone" type="text" class="form-control form-control-sm" placeholder="Ingrese su número de celular" />
         </div>
-        <div class="mb-2">
-          <label class="form-label">Genero</label>
-          <select formControlName="idGender"
-            class="form-select form-select-sm"
-            aria-label="Small select example"
-          >
-            <option [value]="-1" selected>Seleccionar Genero</option>
+        <div class="form-group mb-3">
+          <label class="form-label">Género</label>
+          <select formControlName="idGender" class="form-select form-select-sm" aria-label="Small select example">
+            <option [value]="-1" selected>Seleccionar Género</option>
             <option *ngFor="let gender of genders" [value]="gender.id">{{ gender.gender }}</option>
           </select>
         </div>
-        <div class="mb-2">
-          <label class="form-label">Fecha Nacimiento</label>
+        <div class="form-group mb-3">
+          <label class="form-label">Fecha de Nacimiento</label>
           <input formControlName="birthDate" type="date" class="form-control form-control-sm" />
         </div>
       </div>
     </div>
-    <div class="row d-flex justify-content-center">
-      <div *ngIf="isEdit" class="col-12 col-md-4 mt-2">
-        <button type="submit" class="btn btn-sm btn-primary w-100">
-          <i class="bi bi-pencil-square"></i>
-          Actualizar Datos
+    <div class="row d-flex justify-content-center mt-4">
+      <div class="col-12 col-md-4">
+        <button *ngIf="isEdit" type="submit" class="btn btn-primary btn-sm w-100">
+          <i class="bi bi-pencil-square"></i> Actualizar Datos
         </button>
-      </div>
-      <div *ngIf="!isEdit" class="col-12 col-md-4 mt-2">
-        <button type="submit" class="btn btn-sm btn-primary w-100">
-          <i class="bi bi-person-add"></i>
-          Registrar Datos
+        <button *ngIf="!isEdit" type="submit" class="btn btn-primary btn-sm w-100">
+          <i class="bi bi-person-add"></i> Registrar Datos
         </button>
       </div>
     </div>
   </form>
 </div>
-
